--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,31 +9,15 @@ plugins {
     id "org.jetbrains.kotlin.plugin.parcelize"
 }
 
-def applicationProperties = new Properties()
-applicationProperties.load(new FileInputStream(rootProject.file("application.properties")))
-def sha = System.getenv("GITHUB_SHA")
-def isCI = System.getenv("CI")
-def isSelfBuild = isCI == null || !isCI.equalsIgnoreCase("true")
-def applicationVersionCode = applicationProperties["versionCode"].toInteger()
-def applicationVersionName = applicationProperties["versionName"]
-def isPerVersion = applicationProperties["isPerRelease"] == "true"
-if (isPerVersion) {
-    applicationVersionName = applicationVersionName + "-${applicationProperties["preReleaseName"]}.${applicationProperties["preReleaseVer"]}"
-}
-if (!isSelfBuild) {
-    applicationVersionName = applicationVersionName + "+${sha.substring(0, 7)}"
-}
-
 android {
     buildToolsVersion = '34.0.0'
     compileSdk 34
     defaultConfig {
         applicationId "com.huanchengfly.tieba.post"
         minSdkVersion 21
-        //noinspection OldTargetApi
         targetSdkVersion 34
-        versionCode applicationVersionCode
-        versionName applicationVersionName
+        versionCode 1
+        versionName 1.0.0
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -49,10 +33,8 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
             debuggable false
             jniDebuggable false
-            signingConfig signingConfigs.release
             zipAlignEnabled true
             multiDexEnabled true
         }
